# better-starlight

./: CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  justfile
.github/workflows/: docs.yml
assets/: starlight.desktop
docs/: .gitignore  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/guide/: configuration.md  contribute.md  customize.md  installation.md  usage.md
docs/showcase/: showcase.md
resources/app/: starlight.desktop
src/: main.rs
src/style/: style.css  style.rs
src/ui/: mod.rs  states.rs  ui.rs  ui_helper.rs
src/utils/: applications.rs  command.rs  logger.rs  math_and_units.rs  mod.rs  web.rs
