[package]
name = "starlight"
version = "1.3.0"
edition = "2024"

[dependencies]
# for ui
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_12"] }
gtk4-layer-shell = "0.5.0"

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

# other utils
once_cell = "1.5"
chrono = { version = "0.4" }
lazy_static = "1.4"
clap = { version = "4.5.41", features = ["derive"] }
glib = "0.20.12"
futures = "0.3"
which = "8.0.0"
dirs = "6.0.0"
urlencoding = "2.1.3"
